added some skills logo

--- a/index.html
+++ b/index.html
@@ -471,203 +471,262 @@
           </div>
           <div class="wpo-service-wrap">
             <div class="row align-items-center">
-              <div class="col-lg-4 col-md-6 col-12">
-                <div class="wpo-service-item">
-                  <div class="icon">
-                    <i class="fi flaticon-coding"></i>
+              <div class="col-lg-3 col-md-4 col-12">
+                <a href="https://www.php.net/">
+                  <div class="wpo-service-item">
+                    <div class="icon">
+                      <img
+                        src="assets/images/skill/php.svg"
+                        alt="PHP Programming Language"
+                        loading="lazy"
+                        width="100"
+                      />
+                    </div>
+                    <h2>PHP</h2>
                   </div>
-                  <h2>PHP</h2>
-                  <p>
-                    PHP is a server-side scripting language designed for web
-                    development but also used as a general-purpose programming
-                    language.
-                  </p>
-                </div>
+                </a>
               </div>
-              <div class="col-lg-4 col-md-6 col-12">
-                <div class="wpo-service-item">
-                  <div class="icon">
-                    <i class="fi flaticon-app-development"></i>
+              <div class="col-lg-3 col-md-4 col-12">
+                <a href="https://www.mysql.com/">
+                  <div class="wpo-service-item">
+                    <div class="icon">
+                      <img
+                        src="assets/images/skill/mysql.svg"
+                        alt="MySQL Relational Database Service"
+                        loading="lazy"
+                        width="100"
+                      />
+                    </div>
+                    <h2>MySQL</h2>
                   </div>
-                  <h2>MySQL</h2>
-                  <p>
-                    MySQL is an open-source relational database management
-                    system. SQL is a language programmers use to create, modify
-                    and extract data from the database.
-                  </p>
-                </div>
+                </a>
               </div>
-              <div class="col-lg-4 col-md-6 col-12">
-                <div class="wpo-service-item">
-                  <div class="icon">
-                    <i class="fi flaticon-smartphone"></i>
+              <div class="col-lg-3 col-md-4 col-12">
+                <a href="https://en.wikipedia.org/wiki/JavaScript">
+                  <div class="wpo-service-item">
+                    <div class="icon">
+                      <img
+                        src="assets/images/skill/js.svg"
+                        alt="JavaScript Programming Language"
+                        loading="lazy"
+                        width="100"
+                      />
+                    </div>
+                    <h2>JavaScript</h2>
                   </div>
-                  <h2>JavaScript</h2>
-                  <p>
-                    JavaScript, often abbreviated as JS, is a programming
-                    language that is one of the core technologies of the World
-                    Wide Web, alongside HTML and CSS.
-                  </p>
-                </div>
+                </a>
               </div>
-              <div class="col-lg-4 col-md-6 col-12">
-                <div class="wpo-service-item">
-                  <div class="icon">
-                    <i class="fi flaticon-coding"></i>
+              <div class="col-lg-3 col-md-4 col-12">
+                <a href="https://jquery.com/">
+                  <div class="wpo-service-item">
+                    <div class="icon">
+                      <img
+                        src="assets/images/skill/jquery.svg"
+                        alt="jQuery Library"
+                        loading="lazy"
+                        width="100"
+                      />
+                    </div>
+                    <h2>jQuery</h2>
                   </div>
-                  <h2>jQuery</h2>
-                  <p>
-                    jQuery is a JavaScript library designed to simplify HTML DOM
-                    tree traversal and manipulation, as well as event handling,
-                    CSS animation, and Ajax.
-                  </p>
-                </div>
+                </a>
               </div>
-              <div class="col-lg-4 col-md-6 col-12">
-                <div class="wpo-service-item">
-                  <div class="icon">
-                    <i class="fi flaticon-app-development"></i>
+              <div class="col-lg-3 col-md-4 col-12">
+                <a href="https://reactjs.org/">
+                  <div class="wpo-service-item">
+                    <div class="icon">
+                      <img
+                        src="assets/images/skill/react-js.svg"
+                        alt="ReactJs - A JavaScript library for building user interfaces"
+                        loading="lazy"
+                        width="100"
+                      />
+                    </div>
+                    <h2>ReactJs</h2>
                   </div>
-                  <h2>React</h2>
-                  <p>
-                    React is an open-source, front end, JavaScript library for
-                    building user interfaces or UI components. It is maintained
-                    by Facebook.
-                  </p>
-                </div>
+                </a>
               </div>
-              <div class="col-lg-4 col-md-6 col-12">
-                <div class="wpo-service-item">
-                  <div class="icon">
-                    <i class="fi flaticon-smartphone"></i>
+              <div class="col-lg-3 col-md-4 col-12">
+                <a href="https://expressjs.com/">
+                  <div class="wpo-service-item">
+                    <div class="icon">
+                      <img
+                        src="assets/images/skill/express-js.svg"
+                        alt="Express JS - Fast, unopinionated, minimalist web framework for Node.js"
+                        loading="lazy"
+                        width="100"
+                      />
+                    </div>
+                    <h2>ExpressJs</h2>
                   </div>
-                  <h2>ExpressJs</h2>
-                  <p>
-                    Express.js, or simply Express, is a back end web application
-                    framework for Node.js, released as free and open-source
-                    software under the MIT License.
-                  </p>
-                </div>
+                </a>
               </div>
-              <div class="col-lg-4 col-md-6 col-12">
-                <div class="wpo-service-item">
-                  <div class="icon">
-                    <i class="fi flaticon-coding"></i>
+              <div class="col-lg-3 col-md-4 col-12">
+                <a href="https://getbootstrap.com/">
+                  <div class="wpo-service-item">
+                    <div class="icon">
+                      <img
+                        src="assets/images/skill/bootstrap-5.svg"
+                        alt="Bootstrap - Build fast, responsive sites with Bootstrap"
+                        loading="lazy"
+                        width="100"
+                      />
+                    </div>
+                    <h2>Bootstrap 3-4-5</h2>
                   </div>
-                  <h2>jQuery</h2>
-                  <p>
-                    jQuery is a JavaScript library designed to simplify HTML DOM
-                    tree traversal and manipulation, as well as event handling,
-                    CSS animation, and Ajax.
-                  </p>
-                </div>
+                </a>
               </div>
-              <div class="col-lg-4 col-md-6 col-12">
-                <div class="wpo-service-item">
-                  <div class="icon">
-                    <i class="fi flaticon-app-development"></i>
+              <div class="col-lg-3 col-md-4 col-12">
+                <a href="https://tailwindcss.com/">
+                  <div class="wpo-service-item">
+                    <div class="icon">
+                      <img
+                        src="assets/images/skill/tailwind-css.svg"
+                        alt="Tailwind CSS - A utility-first CSS framework for rapidly building custom designs"
+                        loading="lazy"
+                        width="100"
+                      />
+                    </div>
+                    <h2>Tailwind CSS</h2>
                   </div>
-                  <h2>Bootstrap</h2>
-                  <p>
-                    Bootstrap is a free and open-source CSS framework directed
-                    at responsive, mobile-first front-end web development. It
-                    contains CSS- and JavaScript-based design templates for
-                    interface components.
-                  </p>
-                </div>
+                </a>
               </div>
-              <div class="col-lg-4 col-md-6 col-12">
-                <div class="wpo-service-item">
-                  <div class="icon">
-                    <i class="fi flaticon-smartphone"></i>
+              <div class="col-lg-3 col-md-4 col-12">
+                <a href="https://sass-lang.com/">
+                  <div class="wpo-service-item">
+                    <div class="icon">
+                      <img
+                        src="assets/images/skill/sass-scss.svg"
+                        alt="Sass - Sass is the most mature, stable, and powerful professional grade CSS extension language in the world"
+                        loading="lazy"
+                        width="100"
+                      />
+                    </div>
+                    <h2>Sass/SCSS</h2>
                   </div>
-                  <h2>Tailwind CSS</h2>
-                  <p>
-                    Tailwind CSS is a utility-first CSS framework for rapidly
-                    building custom user interfaces. It is a highly
-                    customizable, low-level CSS framework that gives you all of
-                    the building blocks you need to build bespoke designs.
-                  </p>
-                </div>
+                </a>
               </div>
-              <div class="col-lg-4 col-md-6 col-12">
-                <div class="wpo-service-item">
-                  <div class="icon">
-                    <i class="fi flaticon-coding"></i>
+              <div class="col-lg-3 col-md-4 col-12">
+                <a href="https://flutter.dev/">
+                  <div class="wpo-service-item">
+                    <div class="icon">
+                      <img
+                        src="assets/images/skill/flutter-framework.svg"
+                        alt="Flutter - Flutter is Google's UI toolkit for building beautiful, natively compiled applications for mobile, web, and desktop from a single codebase"
+                        loading="lazy"
+                        width="100"
+                      />
+                    </div>
+                    <h2>Flutter</h2>
                   </div>
-                  <h2>SCSS</h2>
-                  <p>
-                    Sass is a preprocessor scripting language that is
-                    interpreted or compiled into Cascading Style Sheets (CSS).
-                    SassScript is the scripting language itself.
-                  </p>
-                </div>
+                </a>
               </div>
-              <div class="col-lg-4 col-md-6 col-12">
-                <div class="wpo-service-item">
-                  <div class="icon">
-                    <i class="fi flaticon-app-development"></i>
+              <div class="col-lg-3 col-md-4 col-12">
+                <a href="https://github.com/">
+                  <div class="wpo-service-item">
+                    <div class="icon">
+                      <img
+                        src="assets/images/skill/git-and-github.svg"
+                        alt="Git and GitHub - Git is a free and open source distributed version control system designed to handle everything from small to very large projects with speed and efficiency"
+                        loading="lazy"
+                        width="100"
+                      />
+                    </div>
+                    <h2>Git & Github</h2>
                   </div>
-                  <h2>Flutter</h2>
-                  <p>
-                    Flutter is Google's UI toolkit for building beautiful,
-                    natively compiled applications for mobile, web, and desktop
-                    from a single codebase.
-                  </p>
-                </div>
+                </a>
               </div>
-              <div class="col-lg-4 col-md-6 col-12">
-                <div class="wpo-service-item">
-                  <div class="icon">
-                    <i class="fi flaticon-smartphone"></i>
+              <div class="col-lg-3 col-md-4 col-12">
+                <a
+                  href="https://en.wikipedia.org/wiki/Representational_state_transfer"
+                >
+                  <div class="wpo-service-item">
+                    <div class="icon">
+                      <img
+                        src="assets/images/skill/rest-api.svg"
+                        alt="REST API - REST is an architectural style for building distributed systems based on hypermedia"
+                        loading="lazy"
+                        width="100"
+                      />
+                    </div>
+                    <h2>REST API</h2>
                   </div>
-                  <h2>Git & Github</h2>
-                  <p>
-                    Git is a distributed version-control system for tracking
-                    changes in source code during software development. Github
-                    is a web-based hosting service for version control using
-                    Git.
-                  </p>
-                </div>
+                </a>
               </div>
-              <div class="col-lg-4 col-md-6 col-12">
-                <div class="wpo-service-item">
-                  <div class="icon">
-                    <i class="fi flaticon-coding"></i>
+              <div class="col-lg-3 col-md-4 col-12">
+                <a href="https://www.adobe.com/products/photoshop.html">
+                  <div class="wpo-service-item">
+                    <div class="icon">
+                      <img
+                        src="assets/images/skill/photoshop.svg"
+                        alt="Adobe Photoshop - Adobe Photoshop is a raster graphics editor developed and published by Adobe Inc"
+                        loading="lazy"
+                        width="100"
+                      />
+                    </div>
+                    <h2>Photoshop</h2>
                   </div>
-                  <h2>REST API</h2>
-                  <p>
-                    REST is an architectural style for providing standards
-                    between computer systems on the web, making it easier for
-                    systems to communicate with each other.
-                  </p>
-                </div>
+                </a>
               </div>
-              <div class="col-lg-4 col-md-6 col-12">
-                <div class="wpo-service-item">
-                  <div class="icon">
-                    <i class="fi flaticon-app-development"></i>
+              <div class="col-lg-3 col-md-4 col-12">
+                <a href="https://www.adobe.com/products/illustrator.html">
+                  <div class="wpo-service-item">
+                    <div class="icon">
+                      <img
+                        src="assets/images/skill/illustratior-vector-editor.svg"
+                        alt="Adobe Illustrator - Adobe Illustrator is a vector graphics editor developed and marketed by Adobe Inc"
+                        loading="lazy"
+                        width="100"
+                      />
+                    </div>
+                    <h2>Illustrator</h2>
                   </div>
-                  <h2>Photoshop</h2>
-                  <p>
-                    Adobe Photoshop is a raster graphics editor developed and
-                    published by Adobe Inc. for macOS and Windows. It was
-                    originally created in 1988 by Thomas and John Knoll.
-                  </p>
-                </div>
+                </a>
               </div>
-              <div class="col-lg-4 col-md-6 col-12">
-                <div class="wpo-service-item">
-                  <div class="icon">
-                    <i class="fi flaticon-smartphone"></i>
+              <div class="col-lg-3 col-md-4 col-12">
+                <a href="https://profiles.wordpress.org/mdriazwd/">
+                  <div class="wpo-service-item">
+                    <div class="icon">
+                      <img
+                        src="assets/images/skill/wordpress-plugin.svg"
+                        alt="WordPress Plugin - WordPress is a free and open-source content management system written in PHP and paired with a MySQL or MariaDB database"
+                        loading="lazy"
+                        width="100"
+                      />
+                    </div>
+                    <h2>WordPress Plugin</h2>
                   </div>
-                  <h2>Illustrator</h2>
-                  <p>
-                    Adobe Illustrator is a vector graphics editor developed and
-                    marketed by Adobe Inc. Originally designed for the Apple
-                    Macintosh, development of Adobe Illustrator began in 1985.
-                  </p>
-                </div>
+                </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-12">
+                <a href="https://marketplace.whmcs.com/">
+                  <div class="wpo-service-item">
+                    <div class="icon">
+                      <img
+                        src="assets/images/skill/whmcs-vector-logo.svg"
+                        alt="WHMCS Plugin Development - WHMCS is a web hosting automation platform that allows web hosts to automate billing, provisioning, domain registration and management"
+                        loading="lazy"
+                        width="100"
+                      />
+                    </div>
+                    <h2>WHMCS Plugin</h2>
+                  </div>
+                </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-12">
+                <a href="https://codecanyon.net/user/md-riaz/portfolio">
+                  <div class="wpo-service-item">
+                    <div class="icon">
+                      <img
+                        src="assets/images/skill/whmcs-vector-logo.svg"
+                        alt="CodeCanyon - CodeCanyon is a marketplace for buying and selling premium WordPress, HTML5, Android, iOS, PHP, JavaScript, CSS and more"
+                        loading="lazy"
+                        width="100"
+                      />
+                    </div>
+                    <h2>CodeCanyon</h2>
+                  </div>
+                </a>
               </div>
             </div>
           </div>
