link fixed, added meta tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="mdriaz" />
+    <!-- Primary Meta Tags -->
+    <title>MD Riaz — Programmer | Full Stack PHP Developer</title>
+    <meta
+      name="title"
+      content="MD Riaz — Programmer | Full Stack PHP Developer"
+    />
+    <meta
+      name="description"
+      content="Experienced PHP developer with extensive server-side web development knowledge gained in the industry since 2020."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://mdriaz.ml/" />
+    <meta
+      property="og:title"
+      content="MD Riaz — Programmer | Full Stack PHP Developer"
+    />
+    <meta
+      property="og:description"
+      content="Experienced PHP developer with extensive server-side web development knowledge gained in the industry since 2020."
+    />
+    <meta
+      property="og:image"
+      content="https://mdriaz.ml/assets/images/md-riaz.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://mdriaz.ml/" />
+    <meta
+      property="twitter:title"
+      content="MD Riaz — Programmer | Full Stack PHP Developer"
+    />
+    <meta
+      property="twitter:description"
+      content="Experienced PHP developer with extensive server-side web development knowledge gained in the industry since 2020."
+    />
+    <meta
+      property="twitter:image"
+      content="https://mdriaz.ml/assets/images/md-riaz.png"
+    />
     <link
       rel="shortcut icon"
       type="image/png"
@@ -454,7 +496,7 @@
       </div>
       <!-- end of wpo-about-area -->
 
-      <!-- start of wpo-service-area -->
+      <!-- start of professional-skills-area -->
       <div class="wpo-service-area section-padding">
         <div class="container">
           <div class="row justify-content-center">
@@ -713,21 +755,6 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3 col-md-4 col-12">
-                <a href="https://codecanyon.net/user/md-riaz/portfolio">
-                  <div class="wpo-service-item">
-                    <div class="icon">
-                      <img
-                        src="assets/images/skill/whmcs-vector-logo.svg"
-                        alt="CodeCanyon - CodeCanyon is a marketplace for buying and selling premium WordPress, HTML5, Android, iOS, PHP, JavaScript, CSS and more"
-                        loading="lazy"
-                        width="100"
-                      />
-                    </div>
-                    <h2>CodeCanyon</h2>
-                  </div>
-                </a>
-              </div>
             </div>
           </div>
         </div>
@@ -762,7 +789,51 @@
           </svg>
         </div>
       </div>
-      <!-- end of wpo-service-area -->
+      <!-- end of professional-skills-area -->
+
+      <!-- start of marketplace-area -->
+      <div class="wpo-work-area-s2 section-padding">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-lg-6 col-12">
+              <div class="wpo-section-title">
+                <h2>MarketPlace</h2>
+                <p>
+                  The work marketplace is a place where independent
+                  professionals find great opportunities with desirable clients
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="wpo-work-wrap">
+            <div class="row justify-content-center">
+              <div class="col-lg-4 col-md-6 col-12">
+                <div class="wpo-work-item">
+                  <ul>
+                    <li class="logo">
+                      <img
+                        src="assets/images/skill/codecanyon.png"
+                        alt="CodeCanyon"
+                      />
+                    </li>
+                    <li class="date">2020 - Present</li>
+                    <li class="position">
+                      CodeCanyon <span>Software and Plugins</span>
+                    </li>
+                    <li class="link">
+                      <a href="https://codecanyon.net/user/md-riaz/portfolio"
+                        >Go to website</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="shape-p"></div>
+      </div>
+      <!-- end of marketplace-area -->
 
       <!-- start of wpo-work-area -->
       <div class="wpo-work-area section-padding">
@@ -789,7 +860,9 @@
                   Web Developer
                   <span>Alpha Net, ON <span>(Full Time)</span></span>
                 </li>
-                <li class="link"><a href="#">Go to website</a></li>
+                <li class="link">
+                  <a href="https://alpha.net.bd/">Go to website</a>
+                </li>
               </ul>
             </div>
           </div>
@@ -976,16 +1049,34 @@
             <div class="col col-xs-12">
               <div class="partner-grids partners-slider owl-carousel clearfix">
                 <div class="grid">
-                  <img width="100" src="assets/images/partners/1.png" alt="" />
+                  <a href="https://alpha.net.bd/">
+                    <img
+                      width="100"
+                      src="assets/images/partners/alpha-net-bd.png"
+                      alt="Alpha Net BD"
+                      loading="lazy"
+                    />
+                  </a>
                 </div>
                 <div class="grid">
-                  <img width="100" src="assets/images/partners/2.png" alt="" />
+                  <a href="http://novaitinstitute.com/">
+                    <img
+                      width="100"
+                      src="assets/images/partners/nova-it-institute.png"
+                      alt="Nova It Institute"
+                      loading="lazy"
+                    />
+                  </a>
                 </div>
                 <div class="grid">
-                  <img width="100" src="assets/images/partners/3.png" alt="" />
-                </div>
-                <div class="grid">
-                  <img width="100" src="assets/images/partners/4.png" alt="" />
+                  <a href="http://sms.net.bd/">
+                    <img
+                      width="100"
+                      src="assets/images/partners/sms-net-bd.png"
+                      alt="Alpha SMS"
+                      loading="lazy"
+                    />
+                  </a>
                 </div>
               </div>
             </div>
