--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@
               </div>
               <div class="wpo-project-text">
                 <h2>
-                  <a href="portfolio-single.html"
+                  <a href="#"
                     >Arkio - Architecture & Interior WordPress Theme</a
                   >
                 </h2>
@@ -941,7 +941,7 @@
               </div>
               <div class="wpo-project-text">
                 <h2>
-                  <a href="portfolio-single.html"
+                  <a href="#"
                     >Follio - Multipurpose Portfolio HTML5 Template</a
                   >
                 </h2>
@@ -954,7 +954,7 @@
               </div>
               <div class="wpo-project-text">
                 <h2>
-                  <a href="portfolio-single.html"
+                  <a href="#"
                     >Elito - Creative Portfolio HTML5 Template</a
                   >
                 </h2>
@@ -967,7 +967,7 @@
               </div>
               <div class="wpo-project-text">
                 <h2>
-                  <a href="portfolio-single.html"
+                  <a href="#"
                     >Arkio - Architecture & Interior WordPress Theme</a
                   >
                 </h2>
@@ -980,7 +980,7 @@
               </div>
               <div class="wpo-project-text">
                 <h2>
-                  <a href="portfolio-single.html"
+                  <a href="#"
                     >Follio - Multipurpose Portfolio HTML5 Template</a
                   >
                 </h2>
@@ -993,7 +993,7 @@
               </div>
               <div class="wpo-project-text">
                 <h2>
-                  <a href="portfolio-single.html"
+                  <a href="#"
                     >Elito - Creative Portfolio HTML5 Template</a
                   >
                 </h2>
