--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </div>
                 <div class="col-lg-2 col-md-6 col-6">
                   <div class="navbar-header">
-                    <a class="navbar-brand site-logo" href="index-2.html"
+                    <a class="navbar-brand site-logo" href="/"
                       ><img src="assets/images/logo.png" alt="" />MD.Riaz</a
                     >
                   </div>
@@ -1311,7 +1311,7 @@
               <div class="col col-md-6 col-12">
                 <div class="widget about-widget">
                   <div class="logo widget-title">
-                    <a class="site-logo" href="index-2.html"
+                    <a class="site-logo" href="/"
                       ><img src="assets/images/logo.png" alt="" />MD.Riaz</a
                     >
                   </div>
