--- a/index.html
+++ b/index.html
@@ -1297,7 +1297,7 @@
                 </div>
                 <div class="col col-lg-6">
                   <div class="send-message-btn">
-                    <a class="theme-btn" href="contact.html">Contact Us</a>
+                    <a class="theme-btn" href="#">Contact Us</a>
                   </div>
                 </div>
               </div>
