--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     <link href="assets/css/jquery.fancybox.css" rel="stylesheet" />
     <link href="assets/css/odometer-theme-default.css" rel="stylesheet" />
     <link href="assets/sass/style.css" rel="stylesheet" />
+    <script id="chatway" async="true" src="https://cdn.chatway.app/widget.js?id=wxetQGl7ZmlR"></script>
   </head>
 
   <body>
