added chaty chat

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <link href="assets/css/jquery.fancybox.css" rel="stylesheet" />
     <link href="assets/css/odometer-theme-default.css" rel="stylesheet" />
     <link href="assets/sass/style.css" rel="stylesheet" />
-    <script id="chatway" async="true" src="https://cdn.chatway.app/widget.js?id=wxetQGl7ZmlR"></script>
+  <script id="pixel-chaty" async="true" src="https://cdn.chaty.app/pixel.js?id=aIQCa5th"></script>
   </head>
 
   <body>
