--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <link href="assets/css/jquery.fancybox.css" rel="stylesheet" />
     <link href="assets/css/odometer-theme-default.css" rel="stylesheet" />
     <link href="assets/sass/style.css" rel="stylesheet" />
-  <script id="pixel-chaty" async="true" src="https://cdn.chaty.app/pixel.js?id=aIQCa5th"></script>
+
   </head>
 
   <body>
@@ -1458,5 +1458,19 @@
     <script src="assets/js/moving-animation.js"></script>
     <!-- Custom script for this template -->
     <script src="assets/js/script.js"></script>
+
+    <!--Start of Tawk.to Script-->
+      <script type="text/javascript">
+      var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+      (function(){
+      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+      s1.async=true;
+      s1.src='https://embed.tawk.to/605c2a73067c2605c0bc08a4/1f1k0bl1e';
+      s1.charset='UTF-8';
+      s1.setAttribute('crossorigin','*');
+      s0.parentNode.insertBefore(s1,s0);
+      })();
+      </script>
+  <!--End of Tawk.to Script-->
   </body>
 </html>
