--- a/index-2.html
+++ b/index-2.html
@@ -1146,6 +1146,9 @@
     <script src="assets/js/moving-animation.js"></script>
     <!-- Custom script for this template -->
     <script src="assets/js/script.js"></script>
+    
+    <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="15254e98-8742-4998-a88e-21f6c56a52e5";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
+
 </body>
 
 
