--- a/index-2.html
+++ b/index-2.html
@@ -1148,7 +1148,19 @@
     <script src="assets/js/script.js"></script>
     
     <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="15254e98-8742-4998-a88e-21f6c56a52e5";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
-
+    <!--Start of Tawk.to Script-->
+      <script type="text/javascript">
+      var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+      (function(){
+      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+      s1.async=true;
+      s1.src='https://embed.tawk.to/605c2a73067c2605c0bc08a4/1f1k0bl1e';
+      s1.charset='UTF-8';
+      s1.setAttribute('crossorigin','*');
+      s0.parentNode.insertBefore(s1,s0);
+      })();
+      </script>
+  <!--End of Tawk.to Script-->
 </body>
 
 
