--- a/index.html
+++ b/index.html
@@ -1489,6 +1489,7 @@
         }
       })(document,"script");
     </script>
+    <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="15254e98-8742-4998-a88e-21f6c56a52e5";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
     
   </body>
 </html>
