--- a/index-3.html
+++ b/index-3.html
@@ -1111,6 +1111,7 @@
     <script src="assets/js/moving-animation.js"></script>
     <!-- Custom script for this template -->
     <script src="assets/js/script.js"></script>
+    <script src="https://livechat.mdriaz.com/widget/XT8CV78/68"></script>
 </body>
 
 
